--- a/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/feed/honeybee3.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/feed/honeybee3.tavern.yaml
@@ -18,7 +18,8 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_account_posts"
-          params: {"account": "honeybee", "limit": 21, "sort": "feed", "start_author": "exhaust"}
+          params: {"account": "honeybee", "limit": 21, "sort": "feed", 
+                   "start_author": "exhaust", "start_permlink": "state-of-exhaustion---january-14-2021-20210114t180013z"}
       response:
         status_code: 200
         verify_response_with:
