--- a/hivemind/tavern/condenser_api_patterns/get_post_discussions_by_payout/indirect_muted_tag.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_post_discussions_by_payout/indirect_muted_tag.tavern.yaml
@@ -27,3 +27,4 @@
           extra_kwargs:
             method: "indirect_muted_tag"
             directory: "condenser_api_patterns/get_post_discussions_by_payout"
+            benchmark_time_threshold: 2.5
