name and localization fixes

--- a/hivemind/tavern_full_sync/common.yaml
+++ b/hivemind/tavern_full_sync/common.yaml
@@ -4,6 +4,6 @@
 
   variables:
     service:
-      proto: http
+      proto: https
       server: "{tavern.env_vars.HIVEMIND_ADDRESS}"
       port: "{tavern.env_vars.HIVEMIND_PORT}"
