--- a/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/blog/observer_not_exists.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/blog/observer_not_exists.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hivemind bridge_api.get_account_posts sort feed actifit long call
+  test_name: Hivemind bridge_api.get_account_posts sort blog observer_not_exists
 
   marks:
-    - fullsynctest # slow_calls file - 2.152s
+    - fullsynctest # slow_calls file - 3.476s
 
   includes:
     - !include ../../../common.yaml
 
   stages:
-    - name: get_account_posts actifit
+    - name: get_account_posts observer_not_exists
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -18,11 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_account_posts"
-          params: {'limit': 100, 'tag': 'actifit'}
+          params: {"account": "minnowsupport", "observer": "shirahosh", "sort": "blog", "limit": 21}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "actifit"
-            directory: "bridge_api_patterns/get_account_posts/feed"
+            method: "observer_not_exists"
+            directory: "bridge_api_patterns/get_account_posts/blog"
