--- a/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/feed/actifit.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/feed/actifit.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hivemind bridge_api.get_account_posts sort blog observer_not_exists
+  test_name: Hivemind bridge_api.get_account_posts sort feed actifit long call
 
   marks:
-    - fullsynctest # slow_calls file - 3.476s
+    - fullsynctest # slow_calls file - 2.152s
 
   includes:
     - !include ../../../common.yaml
 
   stages:
-    - name: get_account_posts observer_not_exists
+    - name: get_account_posts actifit
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -18,12 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_account_posts"
-          params: {"account": "minnowsupport", "observer": "shirahosh", "sort": "blog", "limit": 21}
+          params: {'limit': 100, "sort": "feed", "account": "actifit"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "observer_not_exists"
-            directory: "bridge_api_negative/get_account_posts/blog"
-            error_response: true
+            method: "actifit"
+            directory: "bridge_api_patterns/get_account_posts/feed"
