--- a/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/feed/el-panal.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/feed/el-panal.tavern.yaml
@@ -18,7 +18,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_account_posts"
-          params: {'limit': 100, 'start_author': null, 'start_permlink': null, 'tag': 'el-panal'}
+          params: {'limit': 100, 'start_author': null, 'start_permlink': null, 'account': 'el-panal', "sort": "feed"}
       response:
         status_code: 200
         verify_response_with:
