--- a/hivemind/tavern_full_sync/condenser_api_patterns/get_discussions_by_feed/joetunex.tavern.yaml
+++ b/hivemind/tavern_full_sync/condenser_api_patterns/get_discussions_by_feed/joetunex.tavern.yaml
@@ -4,7 +4,7 @@
   marks:
     - fullsynctest # tag is not a tag but account whose feed we are looking at (set of posts created/reblogged by those followed by selected account)
                   # there can be no nonempty results for not-up-to-date HM because it only gives posts that were created/reblogged within last month (no param to change it)
-    - xfail # This test is dedicated for HEAD-hivemind
+   # - xfail # This test is dedicated for HEAD-hivemind
 
   includes:
     - !include ../../common.yaml
