[ABW]: added .orig files for negative tests (not much point for positive since a lot depends on mock data nowadays) added missing tests for nonexisting observer (xfail because get_account_posts ignores observer but it would make sense for it to actually use it)

--- a/hivemind/tavern/bridge_api_negative/get_account_posts/comments/invalid_observer.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_account_posts/comments/invalid_observer.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind bridge.get_account_posts order blog invalid observer
 
   marks:
-    - patterntest
+    - patterntest # original didn't run observer through preliminary validation
     - negative
 
   includes:
