--- a/hivemind/tavern/bridge_api_negative/get_account_posts/comments/not_existing_account.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_account_posts/comments/not_existing_account.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind bridge.get_account_posts sort comments not existing account
 
   marks:
-    - patterntest
+    - patterntest # original did not fully validate account (gave empty results)
     - negative
 
   includes:
