--- a/hivemind/tavern/bridge_api_patterns/get_account_posts/blog/test-safari.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_account_posts/blog/test-safari.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-  test_name: Hivemind bridge_api.get_account_posts hive-117600
+  test_name: Hivemind bridge.get_account_posts test # community test
 
   marks:
     - patterntest
@@ -18,16 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_account_posts"
-          params: {
-            "sort":"feed",
-            "account":"hive-117600",
-            "limit":5
-          }
+          params: {"sort":"blog","account":"test-safari"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "hive-117600"
-            directory: "bridge_api_patterns/get_account_posts/feed"
-
+            method: "test-safari"
+            directory: "bridge_api_patterns/get_account_posts/blog"
