--- a/hivemind/tavern/bridge_api_patterns/get_account_posts/payout/test-creator_page_2.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_account_posts/payout/test-creator_page_2.tavern.yaml
@@ -18,11 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_account_posts"
-          params: {"sort":"replies","account":"tester1"}
+          params: {"sort":"payout","account":"test-creator", "start_author":"test-creator", "start_permlink":"re-parrot-reblog-02"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "test-safari"
-            directory: "bridge_api_patterns/get_account_posts/replies"
+            method: "test-creator_page_2"
+            directory: "bridge_api_patterns/get_account_posts/payout"
