--- a/hivemind/tavern/bridge_api_patterns/get_post/deleted.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_post/deleted.tavern.yaml
@@ -1,15 +1,14 @@
 ---
-  test_name: Hivemind bridge_api.get_post gtg with observer patterns test gtg
+  test_name: Hivemind bridge_api.get_post gtg with observer patterns test deleted post
 
   marks:
-    - patterntest
-    # observer is not use in this call due to https://gitlab.syncad.com/hive/hivemind/-/merge_requests/421/diffs#77bb9aa452deae80bb67db28a26b13cb888e7724 changes
+    - patterntest # post with allow_votes = 'f' in database
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: bridge_api.get_post gtg with observer patterns test
+    - name: bridge_api.get_post deleted post patterns test
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -19,11 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_post"
-          params: {"author":"gtg", "permlink":"hello-world","observer":"ignoreall"}
+          params: {"author":"testing001", "permlink":"testing6"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "observer_gtg"
+            method: "deleted"
             directory: "bridge_api_patterns/get_post"
