--- a/hivemind/tavern/bridge_api_patterns/get_post/most_votes.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_post/most_votes.tavern.yaml
@@ -1,15 +1,15 @@
 ---
-  test_name: Hivemind bridge_api.get_post gtg with observer patterns test gtg
+  test_name: Hivemind bridge_api.get_post gtg with observer patterns test post with the most votes
 
   marks:
-    - patterntest
-    # observer is not use in this call due to https://gitlab.syncad.com/hive/hivemind/-/merge_requests/421/diffs#77bb9aa452deae80bb67db28a26b13cb888e7724 changes
+    - patterntest # call lists no more than 1000 votes
+    # this post due to information from database - total_votes = 1565
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: bridge_api.get_post gtg with observer patterns test
+    - name: bridge_api.get_post post with the most votes patterns test
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -19,11 +19,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_post"
-          params: {"author":"gtg", "permlink":"hello-world","observer":"ignoreall"}
+          params: {"author":"xeroc", "permlink":"piston-web-first-open-source-steem-gui---searching-for-alpha-testers"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "observer_gtg"
+            method: "most_votes"
             directory: "bridge_api_patterns/get_post"
