--- a/hived/tavern/condenser_api_patterns/get_conversion_requests/get.tavern.yaml
+++ b/hived/tavern/condenser_api_patterns/get_conversion_requests/get.tavern.yaml
@@ -2,8 +2,7 @@
   test_name: Hived get_conversion_requests
 
   marks:
-    - patterntest
-    - xfail # should return requestet conversion for https://api.hive.blog , but gives empty result
+    - patterntest # as conversions requests change over time, it tests only if API is called
 
   includes:
     - !include ../../common.yaml
