compiler options per target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,11 @@ CMAKE_MINIMUM_REQUIRED( VERSION 3.2 )
 
 PROJECT( psql_tools )
 
-SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
 SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake )
 INCLUDE( compiler )
 INCLUDE( libraries )
 INCLUDE( targets )
 
-SETUP_COMPILER()
+SETUP_OUTPUT_DIRECTORIES()
 
 ADD_SUBDIRECTORY( fork_extension )
