--- a/fork_extension/CMakeLists.txt
+++ b/fork_extension/CMakeLists.txt
@@ -3,9 +3,10 @@ CMAKE_MINIMUM_REQUIRED( VERSION 3.2 )
 SET( target_name fork_extension )
 
 SET( sources
-        postgres_common.cpp
+        initialization.cpp
         trigger.cpp
         back_from_fork.cpp
+        initializer.cpp
         pq/db_client.cpp
         pq/copy_session.cpp
         pq/copy_to_reversible_tuples_session.cpp
