automatically create back_from_fork function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,12 @@ SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake )
 INCLUDE( compiler )
 INCLUDE( git )
 INCLUDE( libraries )
+INCLUDE( postgres )
 INCLUDE( targets )
 
 SETUP_OUTPUT_DIRECTORIES()
 
 GENERATE_GIT_VERSION_FILE()
+GET_RUNTIME_POSTGRES_VARIABLES()
 
 ADD_SUBDIRECTORY( fork_extension )
