add unit tests support + documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,15 @@ INCLUDE( git )
 INCLUDE( libraries )
 INCLUDE( postgres )
 INCLUDE( targets )
+INCLUDE( tests )
 
 SETUP_OUTPUT_DIRECTORIES()
 
 GENERATE_GIT_VERSION_FILE()
 GET_RUNTIME_POSTGRES_VARIABLES()
 
+ENABLE_TESTING()
+
 ADD_SUBDIRECTORY( fork_extension )
+
+ADD_SUBDIRECTORY( tests )
