--- a/hivemind/tavern/bridge_api_patterns/get_discussion/mute_comment_guest.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_discussion/mute_comment_guest.tavern.yaml
@@ -1,15 +1,15 @@
 ---
-  test_name: Hivemind bridge_api.get_discussion alice member of community patterns test
+  test_name: Hivemind bridge_api.get_discussion alice guest of community patterns test
 
   marks:
-    - patterntest # alice is member before answering parent post in this community - mock_data (hive-198723)
-                  # unmuted all comments
+    - patterntest # alice is guest before answering parent post in this community - mock_data (hive-157439)
+                  # muted all comments
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: bridge_api.get_discussion alice as member patterns test
+    - name: bridge_api.get_discussion alice as guest patterns test
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -19,11 +19,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_discussion"
-          params: {"author":"test-safari", "permlink":"please-comment-hive3"}
+          params: {"author":"test-safari", "permlink":"please-comment-hive2-02"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "unmute_comment_member"
+            method: "mute_comment_guest"
             directory: "bridge_api_patterns/get_discussion"
