--- a/hivemind/tavern/bridge_api_patterns/get_discussion/unmute_comment_muted.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_discussion/unmute_comment_muted.tavern.yaml
@@ -1,8 +1,8 @@
 ---
-  test_name: Hivemind bridge_api.get_discussion alice member of community patterns test
+  test_name: Hivemind bridge_api.get_discussion alice muted of community patterns test
 
   marks:
-    - patterntest # alice is member before answering parent post in this community - mock_data (hive-198723)
+    - patterntest # alice is muted before answering parent post in this community - mock_data (hive-171487)
                   # unmuted all comments
 
   includes:
@@ -19,11 +19,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_discussion"
-          params: {"author":"test-safari", "permlink":"please-comment-hive3"}
+          params: {"author":"test-safari", "permlink":"please-comment-hive1"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "unmute_comment_member"
+            method: "unmute_comment_muted"
             directory: "bridge_api_patterns/get_discussion"
