[REFACTOR]: common_includes for shared interfaces

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,6 @@ GET_RUNTIME_POSTGRES_VARIABLES()
 
 ENABLE_TESTING()
 
-ADD_SUBDIRECTORY( fork_extension )
+ADD_SUBDIRECTORY( src )
 
 ADD_SUBDIRECTORY( tests )
