refactoring: split for psql_utils and fork extension

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ CMAKE_MINIMUM_REQUIRED( VERSION 3.2 )
 
 PROJECT( psql_tools )
 
+SET( CMAKE_POSITION_INDEPENDENT_CODE ON )
+
 SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake )
 INCLUDE( compiler )
 INCLUDE( git )
