add pq_tool library

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -2,5 +2,5 @@ ADD_SUBDIRECTORY( googletest )
 
 ADD_SUBDIRECTORY( mockups )
 
-ADD_SUBDIRECTORY( fork_extension )
 ADD_SUBDIRECTORY( psql_utils )
+ADD_SUBDIRECTORY( pq_utils )
