support for truncate works
but spi execute needs to be hide after SpiSession class abstarction

--- a/tests/integration/functional/fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/fork_extension/CMakeLists.txt
@@ -19,3 +19,4 @@ ADD_FUNCTIONAL_TESTS( back_from_fork_constraints.sql )
 ADD_FUNCTIONAL_TESTS( on_table_changed_inserts.sql )
 ADD_FUNCTIONAL_TESTS( on_table_changed_update.sql )
 ADD_FUNCTIONAL_TESTS( on_table_changed_delete.sql )
+ADD_FUNCTIONAL_TESTS( on_table_changed_truncate.sql )
