fixed test and moved one to negative

--- a/hivemind/tavern/bridge_api_negative/get_ranked_posts/trending/tag_hive-123.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_ranked_posts/trending/tag_hive-123.tavern.yaml
@@ -26,3 +26,4 @@
           extra_kwargs:
             method: "tag_hive-123"
             directory: "bridge_api_patterns/get_ranked_posts/trending"
+            error_response: true
