sql fork: create db tables

--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -10,4 +10,5 @@ MACRO( ADD_SQL_FUNCTIONAL_TESTS sql_test_path)
     MESSAGE( STATUS "Added functional tests '${test_target}'" )
 ENDMACRO()
 
-ADD_SQL_FUNCTIONAL_TESTS( register_table.sql )
+ADD_SQL_FUNCTIONAL_TESTS( schema_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( register_table_test.sql )
