hive create context

--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -12,3 +12,4 @@ ENDMACRO()
 
 ADD_SQL_FUNCTIONAL_TESTS( schema_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( register_table_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( create_context_test.sql )
