--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -12,6 +12,8 @@ ENDMACRO()
 
 ADD_SQL_FUNCTIONAL_TESTS( schema_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( register_table_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( register_not_empty_table_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( create_context_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( context_next_block_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_on_insert_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( trigger_on_delete_test.sql )
