on update trigger works

--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -17,3 +17,4 @@ ADD_SQL_FUNCTIONAL_TESTS( create_context_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( context_next_block_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_on_insert_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_on_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( trigger_on_update_test.sql )
