--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -21,7 +21,15 @@ ADD_SQL_FUNCTIONAL_TESTS( context_next_block_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_on_insert_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_on_delete_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_on_update_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( trigger_on_insert_update_delete_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_insert_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_delete_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_update_test.sql )
+
+ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_insert_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_insert_next_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_update_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_update_next_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_delete_insert_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_delete_next_insert_test.sql )
