more test for triggers

--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -22,6 +22,7 @@ ADD_SQL_FUNCTIONAL_TESTS( trigger_on_insert_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_on_delete_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_on_update_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_on_insert_update_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( trigger_on_multi_rows_insert_update_delete_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_insert_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_delete_test.sql )
