--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -32,5 +32,6 @@ ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_insert_delete_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_insert_next_delete_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_update_delete_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_update_next_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_update_some_rows_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_delete_insert_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_delete_next_insert_test.sql )
