--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -41,3 +41,5 @@ ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_delete_next_insert_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_3_tables_insert_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_3_tables_delete_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_3_tables_update_test.sql )
+
+ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_constraint_fk_test.sql )
