--- a/tests/integration/functional/fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/fork_extension/CMakeLists.txt
@@ -20,3 +20,6 @@ ADD_FUNCTIONAL_TESTS( on_table_changed_inserts.sql )
 ADD_FUNCTIONAL_TESTS( on_table_changed_update.sql )
 ADD_FUNCTIONAL_TESTS( on_table_changed_delete.sql )
 ADD_FUNCTIONAL_TESTS( on_table_changed_truncate.sql )
+
+ADD_FUNCTIONAL_TESTS( performance_insert_rows_test.sql )
+ADD_FUNCTIONAL_TESTS( performance_back_from_insert_rows_test.sql )
