performance test for delete operations

--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -51,3 +51,5 @@ ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_complex_type_delete_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( performance_insert_rows_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( performance_back_from_insert_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( performance_delete_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( performance_back_from_delete_rows_test.sql )
