performance tests for update rows

--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -53,3 +53,5 @@ ADD_SQL_FUNCTIONAL_TESTS( performance_insert_rows_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( performance_back_from_insert_rows_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( performance_delete_rows_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( performance_back_from_delete_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( performance_update_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( performance_back_from_update_rows_test.sql )
