--- a/tests/integration/functional/fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/fork_extension/CMakeLists.txt
@@ -24,6 +24,8 @@ ADD_FUNCTIONAL_TESTS( on_table_changed_truncate.sql )
 ADD_FUNCTIONAL_TESTS( performance_insert_rows_test.sql )
 ADD_FUNCTIONAL_TESTS( performance_back_from_insert_rows_test.sql )
 ADD_FUNCTIONAL_TESTS( performance_delete_rows_test.sql )
+ADD_FUNCTIONAL_TESTS( performance_truncate_rows_test.sql )
 ADD_FUNCTIONAL_TESTS( performance_back_from_delete_rows_test.sql )
 ADD_FUNCTIONAL_TESTS( performance_update_rows_test.sql )
 ADD_FUNCTIONAL_TESTS( performance_back_from_update_rows_test.sql )
+ADD_FUNCTIONAL_TESTS( performance_back_from_truncate_rows_test.sql )
