sql fork truncate

--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -21,6 +21,7 @@ ADD_SQL_FUNCTIONAL_TESTS( context_next_block_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_on_insert_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_on_delete_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_on_update_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( trigger_on_truncate_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_on_insert_update_delete_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_on_multi_rows_insert_update_delete_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_3_tables_on_insert_test.sql )
@@ -30,6 +31,7 @@ ADD_SQL_FUNCTIONAL_TESTS( trigger_3_tables_on_delete_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_insert_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_delete_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_update_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_truncate_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_insert_delete_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_insert_next_delete_test.sql )
@@ -55,3 +57,5 @@ ADD_SQL_FUNCTIONAL_TESTS( performance_delete_rows_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( performance_back_from_delete_rows_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( performance_update_rows_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( performance_back_from_update_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( performance_truncate_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( performance_back_from_truncate_rows_test.sql )
