more test for truncate

--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -27,6 +27,7 @@ ADD_SQL_FUNCTIONAL_TESTS( trigger_on_multi_rows_insert_update_delete_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_3_tables_on_insert_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_3_tables_on_update_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( trigger_3_tables_on_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( trigger_3_tables_on_truncate_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_insert_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_delete_test.sql )
@@ -43,6 +44,7 @@ ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_delete_next_insert_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_3_tables_insert_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_3_tables_delete_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_3_tables_update_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_3_tables_truncate_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_constraint_fk_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_constraint_unique_test.sql )
